--- a/restaurant.html
+++ b/restaurant.html
@@ -23,7 +23,7 @@
       <h1><a href="/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" role="navigation">
+    <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
       <li><a href="/" aria-current="page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
