feat:Added Automation tooling with gulp ,IndexedDb and  Manifest
Added custom gulpfile for automating tasks like minification, bundling, and generation of webP images for
high performance for sites.
Cached JSON data into IndexedDB using
Jake Archibald's idb api downloaded via node.
 Add web app manifest.json file for PWA
Updated serviceworker to remove manual caching of images one by one and improved functionality.

--- a/restaurant.html
+++ b/restaurant.html
@@ -68,6 +68,8 @@
   <script defer type="text/javascript" src="js/restaurant_info.js"></script>
   <script defer type="application/javascript" src="register_sw.js"></script> <!-- new -->
   <script defer type="application/javascript" src="serviceworker.js"></script><!-- new -->
+  <!-- IndexedDB Promised library https://github.com/jakearchibald/idb -->
+  <script defer src="js/idb.js"></script>
 
 </body>
 
