--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="theme-color" content="#fdfdfd"/>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
     
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   <link rel="icon" href="img/icons/iconman-128x128.png" sizes="128x128" />
+  <link rel="manifest" href="/manifest.json">
   <title>Restaurant Reviews</title>
 </head>
 
@@ -41,7 +44,7 @@
   <script defer type="application/javascript"  src="js/main.js"></script>
   <script defer type="application/javascript" src="register_sw.js"></script> <!-- new -->
   <script defer type="application/javascript" src="serviceworker.js"></script><!-- new -->
-  
+   <script defer src="js/idb.js"></script>
 
 
   <footer id="footer" role="contentinfo">
