chore:Updated Gzipping Compression ,Gulp Task Sequence, Reviews will be saved in indexedDB, if user is offline,Added Lighthouse Audit Screenshots
-Enabled gzipping Compression and --- Updated Gulp Task Sequence  for better functionality.

-Offline Use: The client application now works offline JSON responses are cached using the IndexedDB API. Any data previously accessed while connected is reachable while offline.
-Better Accesibility
-Updated build  configuration  to generate dist folder .

--- a/offline.html
+++ b/offline.html
@@ -40,7 +40,7 @@
       <a href="/">Home</a>
     </div>
     <div class="right">
-      <img src="./img/offlinegiphy.gif">
+      <img src="./dist/img/offlinegiphy.gif">
     </div>
 </div>
 </body>
