--- a/restaurant.html
+++ b/restaurant.html
@@ -7,7 +7,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="dist/css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
   
   <link rel="icon" href="img/icons/iconman-128x128.png" sizes="128x128" />
@@ -51,7 +51,33 @@
     <section id="reviews-container" aria-label="Reviews">
       <ul id="reviews-list"></ul>
     </section>
-    <!-- End reviews -->
+	<!-- Add review start -->
+    <section id="add-review-container">
+      <h3>Add Review</h3>
+      <form class="review-form">
+        <div>
+          <label for="name">Name:</label>
+          <input type="text" placeholder="Enter Name" id="name" required />
+        </div>
+        <div>
+          <label for="rating">Rating:</label>
+          <select id="rating">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3" selected>3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </div>
+        <div>
+          <label for="comment">Comment:</label>
+          <textarea rows="5" id="comment"
+            placeholder="Add comment" required></textarea>
+          <button type="submit" id="submit">Add review</button>
+        </div>
+      </form>
+    </section>
+    <!-- Add review end -->
   </main>
   <!-- End main -->
 
@@ -63,14 +89,14 @@
   <script defer src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <!-- Beginning scripts -->
   <!-- Database helpers -->
-  <script defer type="text/javascript" src="js/dbhelper.js"></script>
+  <script defer type="text/javascript" src="dist/js/dbhelper.js"></script>
   <!-- Main javascript file -->
-  <script defer type="text/javascript" src="js/restaurant_info.js"></script>
+  <script defer type="text/javascript" src="dist/js/restaurant_info.js"></script>
   <script defer type="application/javascript" src="register_sw.js"></script> <!-- new -->
-  <script defer type="application/javascript" src="serviceworker.js"></script><!-- new -->
+  <script defer type="application/javascript" src="dist/serviceworker.js"></script><!-- new -->
   <!-- IndexedDB Promised library https://github.com/jakearchibald/idb -->
-  <script defer src="js/idb.js"></script>
-
+  <script defer src="dist/js/idb.js"></script>
+<!-- End scripts -->
 </body>
 
 </html>
